🔒️ add auth session channels
